Implement init of drawing functionality via inheritance of CanvasFragment